# ygo-judge

./: .gitignore  .gitmodules  README.md  app.py  eval.py  main.py  pyproject.toml  requirements.txt  store.py  test.py
chroma_db/ab552e3c-b19a-4d11-a277-730a8f589a72/: index_metadata.pickle
completion/: base_completer.py  completer.py  in_context_cards_completer.py  in_context_rules_and_cards_completer.py
completion/prompts/: base_completer_prompt_prefix.txt  in_context_cards_completer_prompt_prefix.txt  in_context_rules_and_cards_completer_prompt_prefix.txt
data/rules/: fast_effect_timing_chart.txt  if_vs_when.txt  official_rulebook_v10.txt  perfect_rulebook_2017.txt  yugioh_subreddit_card_interactions.txt
scripts/: fetch_qa.py  generate_tests.py  populate_vector_db.py  scrape_qas.py  translate.py
src/: base_completer.py
src/completion/: base_completer.py  in_context_cards_completer.py  in_context_rules_and_cards_completer.py
src/parsing/: naive_query_parser.py  query_parser.py
src/store/: store.py  vector_store.py
templates/: index.html
test/scripts/: process_qas.py
tests/test_qas/: 11167.json  11244.json  11349.json  12692.json  13282.json  13644.json  13706.json  13905.json  14229.json  15023.json  15181.json  15182.json  15442.json  15471.json  15523.json  15664.json  15753.json  16135.json  16403.json  16410.json  16643.json  16876.json  17049.json  17051.json  17358.json  17668.json  18499.json  189.json  18903.json  19566.json  19747.json  19821.json  19853.json  20142.json  20329.json  20612.json  20669.json  20778.json  21572.json  (+19 more)
(+7995 files in other folders)
